# SumOfSines

./: CMakeLists.txt  Camera.cpp  Camera.h  main.cpp  shader.frag  shader.vert
